# hindsight

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  architecture.html  circle.yml  configuration.html  docker_push.sh  gen_gh_pages.lua  hindsight.cfg  hindsight_cli.html  hindsight_timer_report.html  index.html  performance.html  search_index.json
benchmarks/: analysis.cfg  analysis.toml  hsr.cfg  multiple.cfg  multiple.toml  single.cfg  single.toml
benchmarks/analysis_run/: counter.cfg  counter.lua
benchmarks/run/: input_test.cfg
benchmarks/run/analysis/: counter.cfg  counter.lua
benchmarks/run/input/: input_test.cfg  input_test.lua
benchmarks/run/output/: counter.cfg  counter.lua
benchmarks/run_hsr/input/: readmsg.cfg  readmsg.lua  tcpinput.lua  tcpinput.off
benchmarks/run_hsr/output/: tcpoutput.lua  tcpoutput.off
benchmarks/run_multiple/: input_test.lua  input_test1.cfg
benchmarks/run_multiple/input/: input_test.lua  input_test1.cfg  input_test2.cfg
cmake/: Findluasandbox.cmake  externals.cmake  mozsvc.cmake  trink.cmake
contrib/: hindsight.cfg  hindsight.init  hindsight.postinst  hindsight.service
docs/: analysis_plugins.md  architecture.md  configuration.md  heka_message_table.md  heka_stream_reader.md  hindsight_cli.md  hindsight_timer_report.md  index.md  input_plugins.md  message_matcher.md  output_plugins.md  performance.md
docs/tutorials/: cookbooks.md  using_decoders_with_input_plugins.md
gitbook/gitbook-plugin-navigator/: package.json
sandboxes/analysis/: output_error_monitor.lua  plugin_monitor.lua  throughput.lua
sandboxes/input/: heka_stdin.lua  heka_tcp.lua  plugins_tsv.lua  prune_input.lua  stats_monitor.lua
sandboxes/output/: debug.lua  heka_log_rolling.lua  heka_tcp.lua  inject_payload.lua
src/: CMakeLists.txt  hindsight.c  hindsight.h  hindsight_config.c  hindsight_config.h  hindsight_logger.c  hindsight_logger.h  hindsight_sandbox_loader.c  hindsight_sandbox_loader.h  hs_analysis_plugins.c  hs_analysis_plugins.h  hs_checkpoint_reader.c  hs_checkpoint_reader.h  hs_checkpoint_writer.c  hs_checkpoint_writer.h  hs_config.c  hs_config.h  hs_heka_message.c  hs_heka_message.h  hs_heka_stream_reader.c  hs_heka_stream_reader.h  hs_input.c  hs_input.h  hs_input_plugins.c  hs_input_plugins.h  hs_logger.c  hs_logger.h  hs_message_matcher.c  hs_message_matcher.h  hs_output.c  hs_output.h  hs_output_plugins.c  hs_output_plugins.h  hs_running_stats.c  hs_running_stats.h  hs_sandbox.c  hs_sandbox.h  hs_sslutil.c  hs_sslutil.h  hs_string_matcher.c  (+3 more)
src/test/: CMakeLists.txt  test.h  test.h.in  test_config.c  test_heka_message.c  test_hindsight.c  test_message_matcher.c  test_sandbox.c  test_string_matcher.c
src/test/cfg/: default.cfg  extra.cfg  output_too_large.cfg  valid.cfg
src/test/load/: foo.cfg
src/test/sandbox/: analysis.cfg  analysis.lua  input.cfg  input.lua  invalid_fn_ext.cfg  output.cfg  output.lua  path_in_fn.cfg
tests/: CMakeLists.txt
tests/plugin_monitor/: CMakeLists.txt  hindsight.cfg  run.sh
tests/plugin_monitor/run/analysis/: monitor_minimum.cfg  monitor_percent.cfg  monitor_success.cfg  plugin_monitor.cfg  terminate.cfg  terminate.lua
tests/plugin_monitor/run/input/: plugin_tsv.cfg  stats_generate.cfg  stats_generate.lua
tests/plugin_monitor/run/output/: plugin_monitor_test.lua  test_alert.cfg  test_alert.lua  test_minimum.cfg  test_percent.cfg  test_success.cfg
tests/stats_monitor/: CMakeLists.txt  hindsight.cfg  run.sh
tests/stats_monitor/run/analysis/: output_error_monitor.cfg
tests/stats_monitor/run/input/: stats_generate.lua  stats_monitor.cfg
tests/stats_monitor/run/output/: test_alert.cfg  test_alert.lua  test_count.cfg  test_percent.cfg  test_success.cfg
tutorials/: cookbooks.html  using_decoders_with_input_plugins.html
util/: hindsight_timer_report.lua  hindsight_timer_report.tsv
